# adventofcode2021

./: pyproject.toml
day1/: count_increase.py
day10/: syntax_check.py
day11/: octopus.py
day12/: path.py
day13/: fold.py
day14/: polymer.py
day15/: shortest_path.py
day2/: distance.py
day3/: diagnosis.py
day4/: bingo.py
day5/: hydrothermal.py
day6/: lanternfish.py
day7/: crabs.py
day8/: digit_signals.py
day9/: heatmap.py
