[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = ""
authors = ["Mattia Tomeo <tomeo.mat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
